--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 <header>
-    <h1>Dashboard Reservations/h1>
+        <div class="header-top">
+            <h1>Dashboard Reservations</h1>
+            <h2>Your journey begins here with complete confidence.</h2>
+        </div>
+
+        <div class="header-actions">
+            <a href="dashboard.html" class="btn-login">Login</a>
+            <a href="dashboard.html" class="btn-register">Registration</a>
+            <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
+        </div>
 </header>
 
 <main>
