--- a/vehicles.html
+++ b/vehicles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vehicles available</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 
         <div class="header-actions">
             <a href="index.html" class="btn-register">Home Page</a>
-            <a href="dashboard.html" class="btn-login">Login</a>
+            <a href="dashboard.html" class="btn-login">Dashboard</a>
             <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
         </div>
     </header>
@@ -33,13 +33,13 @@
             <h2>Cars</h2>
             <div class="vehicle-cards">
                 <div class="vehicle-card">
-                    <img src="resources/clio.png" alt="Voiture 1">
+                    <img src="assets/clio.png" alt="Voiture 1">
                     <h3>Renault Clio</h3>
                     <p>Small, economical and comfortable city car.</p>
                     <button>To book</button>
                 </div>
                 <div class="vehicle-card">
-                    <img src="resources/mercedes.png" alt="Voiture 2">
+                    <img src="assets/mercedes.png" alt="Voiture 2">
                     <h3>Mercedes CLA</h3>
                     <p>A comfortable and elegant car for all your journeys.</p>
                     <button>To book</button>
@@ -52,13 +52,13 @@
             <h2>Motos</h2>
             <div class="vehicle-cards">
                 <div class="vehicle-card">
-                    <img src="resources/yamaha.png" alt="Moto 1">
+                    <img src="assets/yamaha.png" alt="Moto 1">
                     <h3>Yamaha MT-07</h3>
                     <p>Agile and fast for urban and road journeys.</p>
                     <button>To book</button>
                 </div>
                 <div class="vehicle-card">
-                    <img src="resources/xadv.png" Moto 2">
+                    <img src="assets/xadv.png" Moto 2">
                     <h3>XADV</h3>
                     <p>Sporty and comfortable, perfect for adventure.</p>
                     <button>To book</button>
@@ -71,13 +71,13 @@
             <h2>Utilities</h2>
             <div class="vehicle-cards">
                 <div class="vehicle-card">
-                    <img src="resources/trafic.png" alt="Utilitaire 1">
+                    <img src="assets/trafic.png" alt="Utilitaire 1">
                     <h3>Renault trafic</h3>
                     <p>Perfect for transporting your goods easily.</p>
                     <button>To book</button>
                 </div>
                 <div class="vehicle-card">
-                    <img src="resources/sprinter.png" alt="Utilitaire 2">
+                    <img src="assets/sprinter.png" alt="Utilitaire 2">
                     <h3>Mercedes Sprinter</h3>
                     <p>Large volume, ideal for moving or delivery.</p>
                     <button>To book</button>
