--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>Dashboard - Réservations</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-<header>
+    <header>
         <div class="header-top">
             <h1>Dashboard Reservations</h1>
             <h2>Your journey begins here with complete confidence.</h2>
@@ -15,77 +17,55 @@
 
         <div class="header-actions">
             <a href="index.html" class="btn-register">Home Page</a>
-            <a href="dashboard.html" class="btn-login">Login</a>
+            <a href="dashboard.html" class="btn-login">Dashboard</a>
             <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
         </div>
-</header>
+    </header>
 
-<main>
-    <!-- Ajouter une réservation -->
-    <section>
-        <h2>Adding a reservation</h2>
-        <form id="addReservationForm">
-            <input type="text" name="username" placeholder="Nom utilisateur" required>
-            <select name="vehicleType" required>
-                <option value="">Choose a vehicle</option>
-                <option>Car</option>
-                <option>Utility</option>
-                <option>Motorcycle</option>
-            </select>
-            <input type="text" name="city" placeholder="Ville" required>
-            <input type="date" name="tripStart" required>
-            <input type="date" name="tripEnd" required>
-            <button type="submit">Add</button>
-        </form>
-    </section>
+    <main>
+        <!-- Ajouter une réservation -->
+        <section>
+            <h2>Adding a reservation</h2>
+            <form id="addReservationForm" onsubmit="formAddReservation()">
+                <input type="number" name="idClient" placeholder="ID du client" id="idClient" required value="1">
+                <select name="idVehicle" required id="vehiculeChoose">
+                    <option value="">Choose a vehicle</option>
+                </select>
+                <input type="date" name="startReservation" id="startReservation" required>
+                <input type="date" name="endReservation" id="endReservation" required>
+                <input type="number" name="estimatedKm" placeholder="Estimation des kilometres" id="estimatedKm"
+                    required value="10">
+                <button type="submit">Add</button>
+            </form>
+        </section>
 
-    <!-- Liste des réservations -->
-    <section class="dashboard">
-    <h2>List of reservations</h2>
-    <table id="reservationsTable">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>User</th>
-                <th>Vehicle</th>
-                <th>City</th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Jean Dupont</td>
-                <td>Car</td>
-                <td>Paris</td>
-                <td>2025-11-20</td>
-                <td>2025-11-25</td>
-                <td>
-                    <button class="edit">Modifier</button>
-                    <button class="delete">Supprimer</button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Marie Curie</td>
-                <td>Motorcycle</td>
-                <td>Lyon</td>
-                <td>2025-12-01</td>
-                <td>2025-12-05</td>
-                <td>
-                    <button class="edit">Modifier</button>
-                    <button class="delete">Supprimer</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>
-</main>
+        <!-- Liste des réservations -->
+        <section class="dashboard">
+            <h2>List of reservations</h2>
+            <table id="reservationsTable">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>User</th>
+                        <th>Vehicle</th>
+                        <th>estimatedKm</th>
+                        <th>Start</th>
+                        <th>End</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listOfReservation">
+                </tbody>
+            </table>
+        </section>
+    </main>
 
-<footer>
-    <p>&copy; 2025 Vehicle Rental. All rights reserved.</p>
-</footer>
+    <footer>
+        <p>&copy; 2025 Vehicle Rental. All rights reserved.</p>
+    </footer>
+
+
+    <script src="js/dashboard.js"></script>
 </body>
+
 </html>
