--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,10 @@
         </div>
     </header>
 
-    <main>
+    <main style="max-width: unset !important;">
         <section class="dashboard">
             <h2>List of reservations</h2>
-            <table id="reservationsTable">
+            <table class="tableStyle">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -40,6 +40,48 @@
                     </tr>
                 </thead>
                 <tbody id="listOfReservation">
+                </tbody>
+            </table>
+        </section>
+
+        <section class="dashboard">
+            <h2>List of vehicles</h2>
+            <table class="tableStyle">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Type</th>
+                        <th>Model</th>
+                        <th>Color</th>
+                        <th>Cylinder</th>
+                        <th>HorsePower</th>
+                        <th>Volume</th>
+                        <th>Registration</th>
+                        <th>Default Price</th>
+                        <th>Price Per Kilometer</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listOfVehicles">
+                </tbody>
+            </table>
+        </section>
+
+        <section class="dashboard">
+            <h2>List of clients</h2>
+            <table class="tableStyle">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>First name</th>
+                        <th>Last name</th>
+                        <th>Number License</th>
+                        <th>Birthday</th>
+                        <th>Obtaining license</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listOfClients">
                 </tbody>
             </table>
         </section>
