Affichage de vraiment toute les tables disposé pour les administrateurs dans le dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -85,6 +85,39 @@
                 </tbody>
             </table>
         </section>
+
+        <section class="dashboard">
+            <h2>List of maintenance</h2>
+            <table class="tableStyle">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Id Vehicule</th>
+                        <th>Id Unavailability</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listOfMaintenance">
+                </tbody>
+            </table>
+        </section>
+
+        <section class="dashboard">
+            <h2>List of unavailability</h2>
+            <table class="tableStyle">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Type Vehicle</th>
+                        <th>Description</th>
+                        <th>Time</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="listOfUnavailability">
+                </tbody>
+            </table>
+        </section>
     </main>
 
     <footer>
