Modification de l'organisation des pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="header-actions">
             <a href="index.html" class="btn-register">Home Page</a>
-            <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
-            <a href="dashboard.html" class="btn-login">Dashboard</a>
+            <a href="/pages/vehicles/vehicles.html" class="btn-register">Our vehicles-choice</a>
+            <a href="/pages/dashboard/dashboard.html" class="btn-login">Dashboard</a>
         </div>
     </header>
 
