--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Réservations</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 
 <body>
@@ -17,8 +17,8 @@
 
 
         <div class="header-actions">
-            <a href="index.html" class="btn-register">Home Page</a>
-            <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
+            <a href="../../index.html" class="btn-register">Home Page</a>
+            <a href="../vehicles/vehicles.html" class="btn-register">Our vehicles-choice</a>
             <a href="dashboard.html" class="btn-login">Dashboard</a>
         </div>
     </header>
@@ -125,7 +125,7 @@
     </footer>
 
 
-    <script src="js/dashboard.js"></script>
+    <script src="../../js/dashboard.js"></script>
 </body>
 
 </html>
