--- a/pages/vehicles/vehicles.html
+++ b/pages/vehicles/vehicles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicles available</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 
 <body>
@@ -16,9 +16,9 @@
         </div>
 
         <div class="header-actions">
-            <a href="index.html" class="btn-register">Home Page</a>
+            <a href="../../index.html" class="btn-register">Home Page</a>
             <a href="vehicles.html" class="btn-register">Our vehicles-choice</a>
-            <a href="dashboard.html" class="btn-login">Dashboard</a>
+            <a href="../dashboard/dashboard.html" class="btn-login">Dashboard</a>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
         <p>&copy; 2025 Vehicle Rental. All rights reserved.</p>
     </footer>
 
-    <script src="js/vehicles.js"></script>
+    <script src="../../js/vehicles.js"></script>
 </body>
 
 </html>
