Ajout de la modification d'une maintenance dans le dashboard

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -107,7 +107,7 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Id Vehicule</th>
+                        <th>Id Vehicle</th>
                         <th>Id Unavailability</th>
                         <th>Actions</th>
                     </tr>
