--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Réservations</title>
+    <title>Vehicle Rental - Dashboard</title>
     <link rel="stylesheet" href="../../style/style.css">
 </head>
 
 <body>
     <header>
         <div class="header-top">
-            <h1>Dashboard Reservations</h1>
+            <h1>Dashboard</h1>
             <h2>Your journey begins here with complete confidence.</h2>
         </div>
 
@@ -48,7 +48,7 @@
             <h2>List of vehicles</h2>
             <div style="display: flex; flex-direction: row-reverse; margin: 10px;">
                 <a href="./vehicles/addVehicle.html">
-                    <button style=" width: 100%;" class="button_add">Ajouter</button>
+                    <button style=" width: 100%;" class="button_add">Add</button>
                 </a>
             </div>
             <table class="tableStyle">
@@ -76,7 +76,7 @@
             <h2>List of clients</h2>
             <div style="display: flex; flex-direction: row-reverse; margin: 10px;">
                 <a href="./clients/addClients.html">
-                    <button style=" width: 100%;" class="button_add">Ajouter</button>
+                    <button style=" width: 100%;" class="button_add">Add</button>
                 </a>
             </div>
             <table class="tableStyle">
@@ -100,7 +100,7 @@
             <h2>List of maintenance</h2>
             <div style="display: flex; flex-direction: row-reverse; margin: 10px;">
                 <a href="./maintenance/addMaintenance.html">
-                    <button style=" width: 100%;" class="button_add">Ajouter</button>
+                    <button style=" width: 100%;" class="button_add">Add</button>
                 </a>
             </div>
             <table class="tableStyle">
@@ -121,7 +121,7 @@
             <h2>List of unavailability</h2>
             <div style="display: flex; flex-direction: row-reverse; margin: 10px;">
                 <a href="./unavailability/addUnavailability.html">
-                    <button style=" width: 100%;" class="button_add">Ajouter</button>
+                    <button style=" width: 100%;" class="button_add">Add</button>
                 </a>
             </div>
             <table class="tableStyle">
