--- a/pages/vehicles/vehicles.html
+++ b/pages/vehicles/vehicles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehicles available</title>
+    <title>Vehicle Rental - Vehicles available</title>
     <link rel="stylesheet" href="../../style/style.css">
 </head>
 
@@ -24,26 +24,22 @@
 
     <main>
 
-        <!-- ADV / Promotion -->
         <section class="adv">
             <p>🔥 Special offer this month: -20% on all motorcycle bookings! 🔥</p>
         </section>
 
-        <!-- Section Voitures -->
         <section class="vehicle-section">
             <h2>Cars</h2>
             <div class="vehicle-cards" id="mainVehicleCar">
             </div>
         </section>
 
-        <!-- Section Motos -->
         <section class="vehicle-section">
             <h2>Motos</h2>
             <div class="vehicle-cards" id="mainVehicleMoto">
             </div>
         </section>
 
-        <!-- Section Utilitaires -->
         <section class="vehicle-section">
             <h2>Utilities</h2>
             <div class="vehicle-cards" id="mainVehicleUtilities">
