--- a/pages/dashboard/maintenance/editMaintenance.html
+++ b/pages/dashboard/maintenance/editMaintenance.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Modifier maintenance</title>
+    <title>Dashboard - Edit maintenance</title>
     <link rel="stylesheet" href="../../../style/style.css">
 </head>
 
 <body>
     <header>
-        <div class="header-top">
-            <h1>Dashboard Reservations</h1>
+         <div class="header-top">
+            <h1>Dashboard</h1>
             <h2>Your journey begins here with complete confidence.</h2>
         </div>
 
@@ -26,17 +26,17 @@
     <main>
         <form onsubmit="formEditMaintenance()">
             <div style="display: flex;flex-direction: column; align-items: center;">
-                <h2>Modifier une maintenance</h2>
+                <h2>Edit maintenance</h2>
             </div>
             <input type="hidden" name="id" id="id">
             <div style="display: flex;flex-direction: row; align-items: center;">
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="idVehicle">Choissiez le véhicule</label>
+                    <label for="idVehicle">Choose the vehicle</label>
                     <select name="idVehicle" required id="idVehicle">
                     </select>
                 </div>
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="idUnavailability">Choissiez le soucis</label>
+                    <label for="idUnavailability">Choose the unavailability</label>
                     <select name="idUnavailability" required id="idUnavailability">
                     </select>
                 </div>
