--- a/pages/dashboard/reservations/editReservation.html
+++ b/pages/dashboard/reservations/editReservation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Modifier reservation</title>
+    <title>Dashboard - Edit reservation</title>
     <link rel="stylesheet" href="../../../style/style.css">
 </head>
 
@@ -12,8 +12,8 @@
 <body>
 
     <header>
-        <div class="header-top">
-            <h1>Dashboard Reservations</h1>
+         <div class="header-top">
+            <h1>Dashboard</h1>
             <h2>Your journey begins here with complete confidence.</h2>
         </div>
 
@@ -28,16 +28,16 @@
     <main>
         <form onsubmit="formEditReservation()">
             <div style="display: flex;flex-direction: column; align-items: center;">
-                <h2>Modifier la reservation</h2>
+                <h2>Edit reservation</h2>
             </div>
             <input type="hidden" name="id" id="id">
             <div style="display: flex;flex-direction: row; align-items: center;">
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="idClient">IdClient ?</label>
+                    <label for="idClient">IdClient</label>
                     <input type="number" name="idClient" placeholder="ID du client" id="idClient" required>
                 </div>
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="vehiculeChoose">Choissiez le véhicule</label>
+                    <label for="vehiculeChoose">Choose the vehicle</label>
                     <select name="idVehicle" required id="idVehicle">
                     </select>
                 </div>
