--- a/pages/dashboard/unavailability/addUnavailability.html
+++ b/pages/dashboard/unavailability/addUnavailability.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Ajouter un soucis</title>
+    <title>Dashboard - Add a unavailability</title>
     <link rel="stylesheet" href="../../../style/style.css">
 </head>
 
 <body>
     <header>
-        <div class="header-top">
-            <h1>Dashboard Reservations</h1>
+         <div class="header-top">
+            <h1>Dashboard</h1>
             <h2>Your journey begins here with complete confidence.</h2>
         </div>
 
@@ -26,11 +26,11 @@
     <main>
         <form onsubmit="formAddUnavailability()">
             <div style="display: flex;flex-direction: column; align-items: center;">
-                <h2>Ajouter un soucis</h2>
+                <h2>Add a unavailability</h2>
             </div>
             <div style="display: flex;flex-direction: row; align-items: center;">
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="typeVehicle">Type de vehicule ?</label>
+                    <label for="typeVehicle">Vehicle type?</label>
                     <select name="typeVehicle" required id="typeForVehicle">
                         <option value="car">Car</option>
                         <option value="motorcycle">Motorcycle</option>
@@ -44,7 +44,7 @@
             </div>
             <div style="display: flex;flex-direction: row; align-items: center;">
                 <div style="width: 100%; margin: 1rem;">
-                    <label for="timeVehicle">Temps :</label>
+                    <label for="timeVehicle">Time :</label>
                     <input type="number" name="timeVehicle" id="timeVehicle" required>
                 </div>
             </div>
